examples/conf/HTTPRoute_edge_backend-tls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-tls-test
  namespace: edge
spec:
  parentRefs:
    - name: example-gateway
      namespace: edge
  hostnames:
    - "test.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /backend-tls/
      backendRefs:
        - name: test-backend-tls
          port: 30051
